--- a/stylesheet.css
+++ b/stylesheet.css
@@ -170,6 +170,41 @@
       margin-top: 2rem;
       margin-right: 4rem;
   }
+  #service{
+    color: aliceblue;
+    font-size: 20px;
+    line-height: 1.4;
+    margin-bottom: 4rem;
+  }
+  .sub-title{
+    text-align: center;
+    font-size: 60px;
+    padding-bottom: 70px;
+  }
+  .sub-title span{
+    color: aqua;
+  }
+  .container {
+    padding: 90px;
+  }
+  .service-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(259px,1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+  }
+  .service-list div {
+    background-color: transparent;
+    padding: 40px;
+    font-size: 13px;
+    font-weight: 13px;
+    border-right: 10px;
+    border-radius: 20px;
+    transition: background o.5s, transform 0.5s;
+    box-shadow: 1px 1px 20px #012290f7,
+    1px 1px 40px #0053b857;
+
+  }
   
   
   
