--- a/stylesheet.css
+++ b/stylesheet.css
@@ -179,7 +179,7 @@
   .sub-title{
     text-align: center;
     font-size: 60px;
-    padding-bottom: 70px;
+    padding-bottom: 30px;
   }
   .sub-title span{
     color: aqua;
@@ -189,9 +189,9 @@
   }
   .service-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(259px,1fr));
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 40px;
-    margin-top: 50px;
+    margin-top: 20px;
   }
   .service-list div {
     background-color: transparent;
@@ -200,12 +200,280 @@
     font-weight: 13px;
     border-right: 10px;
     border-radius: 20px;
-    transition: background o.5s, transform 0.5s;
+    transition: background 0.5s, transform 0.5s;
     box-shadow: 1px 1px 20px #012290f7,
     1px 1px 40px #0053b857;
 
   }
-  
+  .service-list div i {
+    font-size: 50px;
+    margin-bottom: 30px;
+  }
+  .service-list div h2 {
+    font-size: 30px;
+    margin-bottom: 15px;
+    font-weight: 500;
+  }
+  .service-list div a {
+    text-decoration: none;
+    color: #000;
+    font-size: 12px;
+    margin-top: 20px;
+    display: inline-block;
+
+  }
+  .read {
+    display: inline-block;
+    padding: 12px 28px;
+    background: #0ef;
+    border-radius: 40px;
+    font-size: 16px;
+    color: #081b29;
+    letter-spacing: 1px;
+    text-decoration:  none;
+    font-weight: 600;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: 2s;
+    box-shadow: 0 0 5px cyan, 0 0 25px cyan;
+    margin-bottom: 1rem;
+  }
+  .read:hover {
+    box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan,
+    0 0 200px cyan;
+  }
+  .service-list div:hover {
+    transform: translateY(-20px);
+  }
+  section {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .container1 {
+    width: 600px;
+    height: 500px;
+    padding: 75px 90px;
+    margin-left: 50px;
+    margin-bottom: 150px;
+  }
+  .heading1 {
+    text-align: center;
+    text-decoration: underline;
+    text-underline-offset: 10px;
+    text-decoration-thickness: 5px;
+    margin-bottom: 50px;
+  }
+  .bar {
+    font-size: 23px;
+  }
+  .Technical-bars .bar{
+    margin-top: 40px 0;
+
+  }
+  .Technical-bars .bar:first-child {
+    margin-top: 0;
+  }
+  .Technical-bars .bar:last-child {
+    margin-bottom: 0;
+  }
+  .Technical-bars .bar .info {
+    margin-bottom: 5px;
+  }
+  .Technical-bars .bar .info span {
+    font-size: 17px;
+    font-weight: 500;
+    animation: showText 0.5s 1s linear forwards;
+    opacity: 0;
+  }
+  .Technical-bars .bar .progress-line {
+    position: relative;
+    border-radius: 10px; 
+    width: 100%;
+    height: 5px;
+    background-color: #000;
+    animation: animate 1s cubic-bezier(1,0,0.5,1) forwards;
+    transform: scaleX(0);
+    transform-origin: left;
+    margin-bottom: 20px;
+  }
+  @keyframes animate {
+    100%{
+        transform: scaleX(1);
+    }
+  }
+  .Technical-bars .bar .progress-line span {
+    height: 100%;
+    background-color: #0ef;
+    position: absolute;
+    border-radius: 10px;
+    animation: animate 1s 1s cubic-bezier(1,0,0.5,1) forwards;
+    transform: scaleX(0);
+    transform-origin: left;
+
+  }
+  .progress-line.html span {
+    width: 90%;
+  }
+  .progress-line.css span {
+    width: 75%;
+  }.progress-line.javascript span {
+    width: 60%;
+  }.progress-line.react span {
+    width: 50%;
+  }.progress-line.java span {
+    width: 10%;
+  }
+  .progress-line span::after{
+    position: absolute;
+    padding: 1px 8px;
+    background-color: #000;
+    color: #fff;
+    font-size: 12px;
+    border-radius: 3px;
+    top: -28px;
+    right: -20px;
+    animation: showText 0.5s 1.5s linear forwards;
+    opacity: 0;
+  }
+  .progress-line.html span::after{
+    content: "90%";
+  }
+  .progress-line.css span::after{
+    content: "75%";
+  }
+  .progress-line.javascript span::after{
+    content: "60%";
+  }
+  .progress-line.react span::after{
+    content: "50%";
+  }
+  .progress-line.java span::after{
+    content: "10%";
+  }
+  .progress-line span::before{
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border: 7px solid transparent;
+    border-bottom-width: 0px;
+    border-right-width: 0;
+    border-top-color: #000;
+    top: -10px;
+    right: 0;
+    animation: showText 0.5s 1.5s linear forwards;
+    opacity: 0;
+
+  }
+  @keyframes showText {
+    100%{
+        opacity: 1;
+    }
+  }
+  .radial-bars {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    justify-items: center;
+    align-items: center;
+}
+
+  .radial-bars .radial-bar {
+    width: 50%;
+    height: 170px;
+    margin-bottom: 10px;
+    position: relative;
+  }
+  .radial-bars .radial-bar svg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-90deg);
+    width: 120px;
+    height: 160px;
+  }
+  .radial-bars .radial-bar .progress-bar {
+    stroke-width: 10;
+    stop-color: #000;
+    fill: none;
+    stroke-dasharray: 502;
+    stroke-dashoffset: 502;
+    stroke-linecap: round;
+    animation: animate-bar 1s linear forwards;
+}
+  @keyframes animate-bar {
+    100%{
+        stroke-dashoffset: -1;
+    }
+  }
+  .radial-bars .radial-bar .path {
+    stroke-width: 10;
+    stroke: #0ef;
+    fill: none;
+    stroke-dasharray: 502;
+    stroke-dashoffset: 502;
+    stroke-linecap: round;
+}
+.radial-bar .percentage{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 17px;
+    font-weight: 500;
+    animation: showText 0.5s 1s linear forwards;
+    opacity: 0;
+}
+.radial-bar .text {
+    width: 100%;
+    position: absolute;
+    left: 50%;
+    bottom: -5px;
+    transform: translateX(-50px);
+    font-size: 17px;
+    font-weight: 500;
+    text-align: center;
+    color: #fff;
+    animation: showText 0.5s 1s linear forwards;
+
+}
+  .path-1 {
+    animation: animate-path1 1s 1s linear forwards;
+  }
+  .path-2 {
+    animation: animate-path2 1s 1s linear forwards;
+  }
+
+  .path-3 {
+    animation: animate-path3 1s 1s linear forwards;
+  }
+
+  .path-4 {
+    animation: animate-path4 1s 1s linear forwards;
+  }
+  @keyframes animate-path1 {
+    100% {
+        stroke-dashoffset: 50.2; 
+    }
+}
+@keyframes animate-path2 {
+    100% {
+        stroke-dashoffset: 175.7; 
+    }
+}
+@keyframes animate-path3 {
+    100% {
+        stroke-dashoffset: 125.5; 
+    }
+}
+@keyframes animate-path4 {
+    100% {
+        stroke-dashoffset: 75.3; 
+    }
+}
+
+
+
   
   
   
