--- a/stylesheet.css
+++ b/stylesheet.css
@@ -127,7 +127,7 @@
     animation: slideTop 1s ease forwards;
     animation-delay: 2s;
     box-shadow: 0 0 5px cyan, 0 0 25px cyan;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
   .btn-box:hover {
     box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan,
@@ -149,7 +149,7 @@
       border-radius: 8px;
   }
   .about-text h2 {
-      margin-top: 30px;
+      margin-top: 10px;
       font-size: 60px;
   }
   .about-text h2 span {
@@ -471,6 +471,122 @@
         stroke-dashoffset: 75.3; 
     }
 }
+
+.contact{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 3rem;
+    align-items: center;
+    padding-left: 30px;
+    margin-top: 130px;
+    margin-bottom: 5rem;
+}
+.contact_text h2 {
+    font-size: 90px;
+    line-height: 1;
+    text-align: center;
+}
+.contact_text h2 span {
+    color: #0ef;
+}
+.contact_text h4 {
+    margin: 15px 0;
+    color: rgb(228, 228, 228);
+    font-size: 20px;
+    font-weight: 600;
+}
+.contact_text p {
+    color: rgb(117, 117, 117);
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 2rem;
+}
+.contact_list {
+    margin-bottom: 3rem;
+
+}
+.contact_list li{
+    margin-bottom: 10px;
+    display: block;
+}
+.contact_list li{
+        margin-bottom: 10px;
+        display: block;
+}
+.contact_list i {
+    display: inline-block;
+    color: #0ef;
+    font-size: 20px;
+    font-weight: 600;
+    transition: all .40s ease;
+
+}
+.contact_list li a:hover {
+    transform: scale(1.01) translateY(-5px);
+}
+.contact_icons i {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid aqua;
+    border-radius: 50%;
+    font-size: 20px;
+    color: aqua;
+    text-decoration: none;
+    transition: 0.5s ease;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: calc(0.2s * var(--i));
+    margin: 30px 15px 30px 0;
+}
+.contact_icons i:hover {
+    background: aqua;
+    color: #081b29;
+    box-shadow: 0 0 20px aqua;
+}
+.contact_form form {
+    position: relative;
+}
+.contact_form form input,form textarea {
+    border: none;
+    outline: none;
+    width: 90%;
+    padding: 18px;
+    background: #555557;
+    color: #ffffff;
+    font-size: 1rem;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+    border-radius: 0.5rem;
+}
+.contact_form textarea {
+    resize: none;
+    height: 220px;
+}
+.contact_form form .send {
+    display: inline-block;
+    padding: 14px 60px;
+    background: #0ef;
+    border-radius: 40px;
+    font-size: 18px;
+    color: #081b29;
+    letter-spacing: 1px;
+    text-decoration:  none;
+    font-weight: 600;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: 2s;
+    box-shadow: 0 0 5px cyan, 0 0 25px cyan;
+    margin-bottom: 1rem;
+}
+.contact_form form .send:hover {
+    box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan,
+    0 0 200px cyan;
+  }
+
 
 
 
